# simp_blog

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/templates/: index.html  user_card.html
frontend/: Cargo.toml
frontend/src/: main.rs
src/: main.rs
templates/: index.html
