[package]
name = "simp_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#pulldown-cmark = "0.9.2"
pulldown-cmark = { git = "https://github.com/qiuzhiqian/pulldown-cmark", branch = "master" }
axum = "0.6.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
askama = "0.11.1"
