[package]
name = "blog_front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {version = "0.20.0",features = ["csr"]}
yew-router = "0.17"
pulldown-cmark = { git = "https://github.com/qiuzhiqian/pulldown-cmark", branch = "master" }
reqwest = "0.11.14"